clusters/pixelkube/pixelated/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"labels":{"name":"pixelated"},"name":"pixelated"}}
  labels:
    kubernetes.io/metadata.name: pixelated
    name: pixelated
  name: pixelated
spec:
  finalizers:
  - kubernetes
  phase: Active
