clusters/pixelkube/pixelated/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pixelated-service
  namespace: pixelated
  labels:
    app: pixelated
spec:
  selector:
    app: pixelated
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
